--- a/site papa/static/index.html
+++ b/site papa/static/index.html
@@ -14,20 +14,79 @@
         <p>Bem-vindo ao meu site pessoal da disciplina de progamação web.</p>
     </header>
 
-    <section class="sobre">
-        <img class="sobre__img" src="../styles/perfil.jpeg">
-        <div class="sobre__conteudo">
-            <h6 class="sobre__conteudo__laranjinha">__</h6>
-            <h2 class="sobre__conteudo__titulo">Sobre mim</h2>
-            <p class="sobre__conteudo__paragrafo">Oi, sou o Augusto Vieira de Oliveira, tenho 20 anos e sou estudante de computação. Nasci e fui criado na roça, o que me trouxe um amor pela simplicidade da vida e uma conexão especial 
-            com a natureza. Mas também sou um grande fã de games! Adoro passar meu tempo livre mergulhando em diferentes universos virtuais, explorando e me divertindo. Minha paixão pelos jogos me motivou a estudar computação, onde estou focado em aprender sobre programação e desenvolvimento de jogos. Estou sempre em busca de desafios que me ajudem a aprimorar minhas habilidades e conhecimentos nessa área fascinante.</p>
-        </div>
+    <main>
+
+        <section class="sobre">
+            <img class="sobre__img" src="../styles/perfil.jpeg">
+            <div class="sobre__conteudo">
+                <h6 class="laranjinha">__</h6>
+                <h2 class="sobre__conteudo__titulo">Sobre mim</h2>
+                <p class="sobre__conteudo__paragrafo">Oi, sou o Augusto Vieira de Oliveira, tenho 20 anos e sou estudante de computação. Nasci e fui criado na roça, o que me trouxe um amor pela simplicidade da vida e uma conexão especial 
+                com a natureza. Mas também sou um grande fã de games! Adoro passar meu tempo livre mergulhando em diferentes universos virtuais, explorando e me divertindo. Minha paixão pelos jogos me motivou a estudar computação, onde estou focado em aprender sobre programação e desenvolvimento de jogos. Estou sempre em busca de desafios que me ajudem a aprimorar minhas habilidades e conhecimentos nessa área fascinante.</p>
+            </div>
+            </section>
+
+        <section class="linkGit">
+            <h6 class="laranjinha">__</h6>
+            <h2 class="linkGit__titulo">Repositório do GitHub</h2>
+            <p>Veja alguns projetos que já desenvolvi ou que estou trabalhando.</p>
+            <a class="linkGit__link" href="https://facebook.com">Link do repositório →</a>
         </section>
 
-    <section>
-        <h2>Repositório do GitHub</h2>
-        <p>Veja alguns projetos que já desenvolvi ou que estou trabalhando.</p>
-        <a href="https://facebook.com">Link do repositório</a>
-    </section>
+        <section class="interesses">
+            <div class="interesses__intro">
+                <h6 class="laranjinha">__</h6>
+                <h2 class="interesses__intro__titulo">Passatempos e interesses pessoais</h2>
+                <p class="interesses__intro__paragrafo">Algumas coisas que gosto de fazer no meu tempo livre, tanto para me divertir, quanto para relaxar.</p>
+            </div>
+
+            <section class="interesses__descrição">
+                <div class="interesses__box">
+                    <img class="interesse__descrição__img" src="../styles/progamar.jpg">
+                    <div class="interesse__descrição__box">
+                        <h3 class="interesses__descrição__titulo">Programar</h3>
+                        <p class="interesses__descrição__paragrafo">Gosto de criar jogos e estudar linguagens de programação. Inclusive criei um mobile chamado Splash Amazônia para Android.</p>
+                    </div>
+                </div>
+                <div class="interesses__box">
+                    <img class="interesse__descrição__img" src="../styles/jogos.png">
+                    <div class="interesse__descrição__box">
+                        <h3 class="interesses__descrição__titulo">Jogos</h3>
+                        <p class="interesses__descrição__paragrafo">Entre eles Minecraft, Call Of Duty, Warcraft III, Forza Horizon e Splash Amazônia..</p>
+                    </div>
+                </div>
+                <div class="interesses__box">
+                    <img class="interesse__descrição__img" src="../styles/ouvirMusica.jpeg">
+                    <div class="interesse__descrição__box">
+                        <h3 class="interesses__descrição__titulo">Ouvir Músicas</h3>
+                        <p class="interesses__descrição__paragrafo">Enquanto pratico outros hobbies, costumo escutar músicas. Sou muito eclético e escuto todos os estilos.</p>
+                    </div>
+                </div>
+            </section>
+        </section>
+
+        <section class="infoP">
+            <div class="infoP__box">
+                <img class="infoP__imagem" src="../styles/contact-mail.png">
+                <div class="infoP__box__escrito">
+                    <h3 class="infoP__titulo">Contatos</h3>
+                    <p class="infoP__desc">augustovieiraoli@gmail.com</p>
+                    <p class="infoP__desc">(035) 99913-1028</p>
+                </div>
+            </div>
+            <div class="infoP__box">
+                <img class="infoP__imagem" src="../styles/address.png">
+                <div class="infoP__box__escrito">
+                    <h3 class="infoP__titulo">Endereço</h3>
+                    <p class="infoP__desc">Rua Pio XII, Parque das Nações</p>
+                    <p class="infoP__desc">Alfenas - MG</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2023 Augusto Vieoli | Powered by Augusto Vieoli</p>
+    </footer>
 </body>
 </html>
